Prevented header buttons from wrapping onto a new line if screen was zoomed enough, small layout changes

--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ button {
     background-color: var(--color-primary);
     color: white;
     border-radius: 20px;
-    width: 130px;
-    height: 60px;
+    width: clamp(50px, 130px, 150px);
+    height: clamp(20px, 60px, 70px);
     margin-left: var(--space-m);
     font-size: var(--font-size-regular);
 }
@@ -88,6 +88,11 @@ button:hover {
     align-items: center;
 }
 
+.header .header-buttons {
+    grid-area: 2 / 2 / 2 / 3;
+    white-space: nowrap;
+}
+
 .search,
 .user-info {
     display: flex;
@@ -98,6 +103,10 @@ button:hover {
 .header>.user-info>span {
     color: black !important;
     margin-left: var(--space-m);
+}
+
+.user-info {
+    grid-area: 1 / 2 / 1 / 3;
 }
 
 .user-info>img,
@@ -114,7 +123,7 @@ button:hover {
 }
 
 .user-profile>img {
-    width: auto;
+    width: 100px;
     height: 100px;
     border-radius: 100%;
     margin-left: var(--space-m);
